--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
           <div class="subheading mb-5">Almaty · Qazaqstan  ·
             <a href="mailto:almas.kairatuly@gmail.com">almas.kairatuly@gmail.com</a>
           </div>
-          <p class="lead mb-5">I am experienced mobile developer based in Almaty. robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-          <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="lead mb-5">I am an experienced iOS developer based in Almaty. I will help you build your next mobile app in no time. Also, will cover both iOS front-end and back end part to get your app running on the App Store in the shortest possible time.</p>
           <div class="social-icons">
             <a href="#">
               <i class="fab fa-linkedin-in"></i>
@@ -177,7 +176,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
           <h2 class="mb-5">Skills</h2>
-
+          <!--
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
@@ -217,18 +216,21 @@
               <i class="fab fa-npm"></i>
             </li>
           </ul>
-
-          <div class="subheading mb-3">Workflow</div>
+          -->
+          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              Swift &amp; Objective-C</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+              XCode &amp; Sketch</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
+              MVC, MVVM &amp; VIPER</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              GCD &amp; Operation Queue</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Agile Development &amp; Scrum</li>
@@ -241,9 +243,38 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
           <h2 class="mb-5">Projects</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">KinoApp’13 (movie schedules); ZonaKZ’13 (news portal); Camellia’15 (flower stores marketplace); ToiDriver’15 (Event service providers marketplace); QazaqApp’16 (Kazakh language)</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              StockMetrix (2018, stock market analytics)</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Decrypted (2018, cryptocurrencies real-time analytics)</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              HomeDesigner (2017, Home design)</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Flashboard (2016, Anaplan mobile-optimized reports)</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              QazaqApp (2016, learning Kazakh language)</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              LunchApp (2016, catalog of local dining places)</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              ToiDriver (2015, Event services marketplace);</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Camellia (2015, flower stores marketplace)</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              ZonaKZ (2013, news portal)</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              KinoApp (2013, movie schedules)</li>
+          </ul>
         </div>
       </section>
 
