cv update social icons

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
             <a href="mailto:almas.kairatuly@gmail.com">almas.kairatuly@gmail.com</a>
           </div>
           <p class="lead mb-5">I am an experienced iOS developer based in Almaty. I will help you build your next mobile app in no time. Also, will cover both iOS front-end and back end part to get your app running on the App Store in the shortest possible time.</p>
+          <!-- Social icons -->
+          <!--
           <div class="social-icons">
             <a href="#">
               <i class="fab fa-linkedin-in"></i>
@@ -84,6 +86,7 @@
               <i class="fab fa-facebook-f"></i>
             </a>
           </div>
+          -->
         </div>
       </section>
 
