--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects2">Projects 2</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
           </li>
         </ul>
@@ -133,7 +136,7 @@
               <p class="mb-0">Performed feasibility study for EGIS for national oil operator</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">June 2013 - October 2013</span>
+              <span class="text-primary">February 2014 - August 2015</span>
             </div>
           </div>
 
@@ -278,6 +281,191 @@
               <i class="fa-li fa fa-check"></i>
               KinoApp (2013, movie schedules)</li>
           </ul>
+        </div>
+      </section>
+
+      <hr class="m-0">
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects2">
+        <div class="my-auto">
+          <h2 class="mb-5">Projects &amp; 2</h2>
+          <div class="card-deck">
+            <div class="card ">
+              <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="card-img-top d-block w-100" src="img/stockmetrix1.jpg" alt="screen 1">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/stockmetrix2.jpg" alt="screen 2">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/stockmetrix3.jpg" alt="screen 3">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/stockmetrix4.jpg" alt="screen 4">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/stockmetrix5.jpg" alt="screen 5">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls1" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls1" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">StockMetrix</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+            <div class="card ">
+              <img class="card-img-top" src="img/decrypted1.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Decrypted</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+            <div class="card ">
+              <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="card-img-top d-block w-100" src="img/flashboard1.jpg" alt="screen 1">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/flashboard2.jpg" alt="screen 2">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/flashboard3.jpg" alt="screen 3">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/flashboard4.jpg" alt="screen 4">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/flashboard5.jpg" alt="screen 5">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Flashboard</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+            </div>
+          </div>
+          <div class="card-deck mt-3">
+            <div class="card">
+              <div id="carouselExampleControls4" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="card-img-top d-block w-100" src="img/lunchapp1.jpg" alt="screen 1">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/lunchapp2.jpg" alt="screen 2">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/lunchapp3.jpg" alt="screen 3">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/lunchapp4.jpg" alt="screen 4">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/lunchapp5.jpg" alt="screen 5">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/lunchapp6.jpg" alt="screen 6">
+                  </div>
+                </div>
+                <a class="carousel-control-prev mb-2 bg-dark text-white" href="#carouselExampleControls4" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next mb-2 bg-dark text-white" href="#carouselExampleControls4" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">LunchApp</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+            </div>
+            <!--  <div class="card" style="opacity: 0">  -->
+            <div class="card">
+              <div id="carouselExampleControls3" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="card-img-top d-block w-100" src="img/camellia1.jpg" alt="screen 1">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/camellia2.jpg" alt="screen 2">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/camellia3.jpg" alt="screen 3">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls3" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls3" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Camellia</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+            </div>
+            <div class="card">
+              <div id="carouselExampleControls5" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="card-img-top d-block w-100" src="img/qazaqapp1.jpg" alt="screen 1">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/qazaqapp2.jpg" alt="screen 2">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/qazaqapp3.jpg" alt="screen 3">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/qazaqapp4.jpg" alt="screen 4">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/qazaqapp5.jpg" alt="screen 5">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/qazaqapp6.jpg" alt="screen 6">
+                  </div>
+                </div>
+                <a class="carousel-control-prev mb-2 bg-dark text-white" href="#carouselExampleControls5" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next mb-2 bg-dark text-white" href="#carouselExampleControls5" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">QazaqApp</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
