--- a/index.html
+++ b/index.html
@@ -320,14 +320,15 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title">StockMetrix</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">Stock market analytics app with 250+ financial indicators. Drag and drop indicators to create your own unique strategy. Tech stack: Subscription, In-App purchases, Realm, Graphs, GCD for client-side calculations.</p>
+                <p class="card-text"><small class="text-muted"><a target="_blank" href="https://www.stockmetrix.net/">https://www.stockmetrix.net/</a></small></p>
               </div>
             </div>
             <div class="card ">
               <img class="card-img-top" src="img/decrypted1.jpg" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Decrypted</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">Real-time top-20 cryptocurrencies analytics app. Social-media sentiment, Google trends and Technical Indicators. Tech stack: Sockets, Realm, Graphs.</p>
               </div>
             </div>
             <div class="card ">
