--- a/index.html
+++ b/index.html
@@ -361,7 +361,8 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title">Flashboard</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text">Anaplan reporting numbers on the go. Pull and refresh pre-defined reports from your Anaplan models. See your latest performance or planning roll-up in clean, mobile-optimized summaries.</p>
+                <p class="card-text"><small class="text-muted"><a target="_blank" href="https://itunes.apple.com/us/app/flashboard-anaplan-reporting/id1170391141?mt=8">App Store link</a></small></p>
               </div>
             </div>
           </div>
@@ -399,7 +400,8 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title">LunchApp</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text">Catalog of local business lunches with 360 photos, AR map and bonus system.</p>
+                <p class="card-text"><small class="text-muted"><a target="_blank" href="https://itunes.apple.com/us/app/apple-store/id1121002844?mt=8">App Store link</a></small></p>
               </div>
             </div>
             <!--  <div class="card" style="opacity: 0">  -->
@@ -427,7 +429,7 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title">Camellia</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text">Flower stores marketplace with Credit Card/PayPal payment integration.</p>
               </div>
             </div>
             <div class="card">
@@ -463,7 +465,9 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title">QazaqApp</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text">Duolingo for Qazakh language.</p>
+                <p class="card-text"><small class="text-muted"><a target="_blank" href="https://itunes.apple.com/us/app/apple-store/id1180405380?mt=8">App Store link</a></small></p>
+
               </div>
             </div>
           </div>
